--- a/package.json
+++ b/package.json
@@ -234,7 +234,7 @@
     }
   },
   "scripts": {
-    "build": "npx vsce package --no-yarn --no-dependencies --mode production --devtool hidden-source-map",
+    "build": "npx vsce package --no-yarn --no-dependencies",
     "vscode:prepublish": "pnpm run package",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
