--- a/resources/template/.quickopsrc.json
+++ b/resources/template/.quickopsrc.json
@@ -1,7 +1,8 @@
 {
   "general": {
     "debug": true,
-    "excludeConfigFiles": true
+    "excludeConfigFiles": true,
+    "anchorViewMode": "mindmap"
   },
   "logger": {
     "template": "[icon]-[~/^/^/name]-[line]-[$0]",
