feat:修复view打开出现白屏问题以及修复.telemetryrc和.quickopsrc添加和忽略跟踪的问题

--- a/.quickopsrc
+++ b/.quickopsrc
@@ -3,7 +3,8 @@
     "debug": true,
     "excludeConfigFiles": false,
     "anchorViewMode": "mindmap",
-    "mindMapPosition": "right"
+    "mindMapPosition": "right",
+    "excludeTelemetryFile": true
   },
   "logger": {
     "template": "[icon]-[~/^/^/name]-[line]-[$0]",
@@ -15,6 +16,8 @@
   "git": {
     "ignoreList": []
   },
+  "snippets": [],
+  "shells": [],
   "project": {
     "marks": {
       "@FIXME": {
