feat:配置中文的tsconfig的jsonValidation

--- a/package.json
+++ b/package.json
@@ -65,6 +65,10 @@
       {
         "fileMatch": ".telemetryrc",
         "url": "./resources/schema/.telemetryrc-schema.json"
+      },
+      {
+        "fileMatch": "tsconfig*.json",
+        "url": "./resources/schema/tsconfig-zh-schema.json"
       }
     ],
     "webviews": {
