--- a/package.json
+++ b/package.json
@@ -47,12 +47,7 @@
       {
         "id": "json",
         "filenames": [
-          ".quickopsrc"
-        ]
-      },
-      {
-        "id": "json",
-        "filenames": [
+          ".quickopsrc",
           ".telemetryrc"
         ]
       }
@@ -65,10 +60,6 @@
       {
         "fileMatch": ".telemetryrc",
         "url": "./resources/schema/.telemetryrc-schema.json"
-      },
-      {
-        "fileMatch": "tsconfig*.json",
-        "url": "./resources/schema/tsconfig-zh-schema.json"
       }
     ],
     "webviews": {
