fix:修复右键切换忽略的问题

--- a/package.json
+++ b/package.json
@@ -109,13 +109,8 @@
         "category": "Quick Ops"
       },
       {
-        "command": "quickOps.addToIgnore",
-        "title": "添加到 QuickOps 忽略列表 (Ignore in QuickOps)",
-        "category": "Quick Ops"
-      },
-      {
-        "command": "quickOps.removeFromIgnore",
-        "title": "从 QuickOps 忽略列表移除 (Unignore in QuickOps)",
+        "command": "quickOps.toggleIgnore",
+        "title": "添加/移除 QuickOps 忽略 (Toggle Ignore)",
         "category": "Quick Ops"
       },
       {
@@ -125,12 +120,13 @@
       },
       {
         "command": "quick-ops.anchor.add",
-        "title": "Add Anchor Point (添加锚点)",
+        "title": "添加锚点",
         "icon": "$(bookmark)"
       },
       {
         "command": "quick-ops.anchor.showMenu",
-        "title": "Show Anchors"
+        "title": "显示锚点菜单 (Show Anchors)",
+        "icon": "$(bookmark)"
       },
       {
         "command": "quick-ops.anchor.listByGroup",
@@ -238,6 +234,11 @@
           "command": "quickOps.scrollToBottom",
           "group": "navigation@3",
           "when": "editorTextFocus"
+        },
+        {
+          "command": "quick-ops.anchor.showMenu",
+          "group": "navigation@4",
+          "when": "quickOps.hasAnchorsInCurrentFile"
         }
       ],
       "explorer/context": [
@@ -247,14 +248,9 @@
           "when": "quickOps.context.configMissing"
         },
         {
-          "command": "quickOps.addToIgnore",
+          "command": "quickOps.toggleIgnore",
           "group": "quickOps@5",
-          "when": "!quickOps.context.configMissing && !quickOps.isCurrentResourceIgnored && resourceScheme == file"
-        },
-        {
-          "command": "quickOps.removeFromIgnore",
-          "group": "quickOps@5",
-          "when": "!quickOps.context.configMissing && quickOps.isCurrentResourceIgnored && resourceScheme == file"
+          "when": "!quickOps.context.configMissing && resourceScheme == file"
         },
         {
           "command": "quick-ops.generateStyleStructure",
